2014-05-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineTreeViewEditor.cpp:
	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* NodePropertiesEditor.h:
	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.h:
	* OutlineEditor.cpp:
	* NodePropertiesEditor.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* BrowserWindow.cpp:
	* OutlineEditor.xml:
	* X3DBrowserWidget.cpp:
	* OutlineEditor.h:
	* OutlineEditor.cpp:
	* X3DOutlineEditorInterface.h:
	* X3DOutlineEditorInterface.cpp: 

2014-05-17  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* MagicImport.cpp:
	* BrowserWindow.cpp:
	* X3DBaseInterface.cpp:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* HistoryEditor.cpp:
	* OutlineEditor.cpp:
	* X3DBrowserSelection.cpp:
	* MaterialEditor.cpp:
	* NodePropertiesEditor.cpp: 

2014-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.cpp:
	* OutlineTreeModel.h:
	* OutlineTreeModel.cpp:
	* OutlineRouteGraph.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineCellRenderer.cpp: 

2014-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* BrowserWindow.h:
	* X3DBaseInterface.cpp:
	* BrowserWindow.cpp:
	* OutlineEditor.xml:
	* X3DBrowserEditor.cpp:
	* OutlineEditor.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.cpp:
	* X3DOutlineEditorInterface.h:
	* X3DOutlineEditorInterface.cpp: 

2014-05-16  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.xml:
	* X3DBrowserEditor.cpp:
	* OutlineEditor.h:
	* OutlineEditor.cpp:
	* X3DBrowserSelection.cpp:
	* OutlineTreeModel.h:
	* X3DOutlineTreeView.h:
	* OutlineTreeModel.cpp:
	* OutlineRouteGraph.cpp:
	* X3DOutlineTreeView.cpp:
	* X3DOutlineEditorInterface.h:
	* X3DOutlineEditorInterface.cpp:
	* OutlineCellRenderer.cpp: 
